--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditRollo.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditRollo.cshtml
@@ -418,7 +418,7 @@
             'Descripción núm. de parte', 'Norma de referencia', 'Espesor (mm)', 'Tolerancia espesor negativa (mm)', 'Tolerancia espesor positiva (mm)', 'Ancho (mm)', 'Tolerancia ancho negativa (mm)',
             'Tolerancia ancho positiva (mm)', 'Descripción Material (ES)', 'Descripción Material (EN)', 'Diametro interior (mm)', 'Diametro exterior máximo (mm)', 'Peso del recubrimiento',
             'Transito', 'Procesadores Ext.', 'Número procesador Ext.', 'Núm. antigüo material',
-            'Planicidad (mm)', 'MSA (Honda)', 'Fecha validez', 'Disponente asignado', 'Unidad Medida Ventas',
+            'Planicidad (mm)', 'MSA (Honda)', 'Fin de Vigencia', 'Disponente asignado', 'Unidad Medida Ventas',
             /*BUDGET*/
             'Tipo de Material (Budget)', 'Parte Int/Ext', 'Posición del Rollo para embarque', 'Modelo de negocio', 'Peso bruto REAL bascula (kg)', 'Peso neto REAL bascula (kg)', 'Ángulo A', 'Ángulo B',
             'Scrap permitido (%)', 'Piezas Dobles', 'Reaplicación', 'Req. conciliación Puntas y colas', 'Conciliación Scrap Ingenieria',
@@ -797,7 +797,7 @@
                             case GetColFromName("MSA (Honda)"):
                             case GetColFromName("Req. conciliación Puntas y colas"):
                             case GetColFromName("Scrap permitido (%)"):
-                            case GetColFromName("Fecha validez"):
+                            case GetColFromName("Fin de Vigencia"):
                             case GetColFromName("Disponente asignado"):
                                 applyClass(TH, 'HTred');
                                 break;
@@ -1240,7 +1240,7 @@
                             }
                         }
                     },
-                    { // fecha validez  (necesita moment JS)
+                    { // Fin de Vigencia  (necesita moment JS)
                         type: 'date', dateFormat: 'DD/MM/YYYY',
                         validator: function (value, callback) {
                             //determina si es obligatorio, según tipo de venta
@@ -1691,7 +1691,7 @@
                     150,               // Núm. antigüo material
                     100,               // Planicidad (mm)
                     100,               // MSA (Honda)
-                    100,               // Fecha validez
+                    100,               // Fin de Vigencia
                     300,               // Disponente asignado
                     150,               // Unidad Medida Ventas
                     //BUDGET
@@ -2006,7 +2006,7 @@
                     }
 
                     //determina si angulo A y B están habilitados
-                    if (col == GetColFromName("Fecha validez")) {
+                    if (col == GetColFromName("Fin de Vigencia")) {
                         // Se elimina la lógica condicional para que la celda siempre sea editable.
                         cellProperties.readOnly = false;
                     }
@@ -2039,12 +2039,12 @@
                 hot.setDataAtCell(row, GetColFromName("Requiere PPAP's"), '', null);
             }
 
-            //tambien restablece fecha validez
+            //tambien restablece Fin de Vigencia
             if (tipoVenta != null && !tipoVenta.toUpperCase().includes("FACTORY ASSIST")
                 && !tipoVenta.toUpperCase().includes("SPOT")
                 && !tipoVenta.toUpperCase().includes("REAPLICACIÓN")
             ) {
-                hot.setDataAtCell(row, GetColFromName("Fecha validez"), '', null);
+                hot.setDataAtCell(row, GetColFromName("Fin de Vigencia"), '', null);
             }
 
         }
