--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditarSolicitud.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditarSolicitud.cshtml
@@ -1849,7 +1849,7 @@
                 'Descripción núm. de parte', 'Norma de referencia', 'Espesor (mm)', 'Tolerancia espesor negativa (mm)', 'Tolerancia espesor positiva (mm)', 'Ancho (mm)', 'Tolerancia ancho negativa (mm)',
                 'Tolerancia ancho positiva (mm)', 'Descripción Material (ES)', 'Descripción Material (EN)', 'Diametro interior (mm)', 'Diametro exterior máximo (mm)', 'Peso del recubrimiento',
                 'Transito', 'Procesadores Ext.', 'Número procesador Ext.', 'Núm. antigüo material',
-                'Planicidad (mm)', 'MSA (Honda)', 'Fecha validez', 'Disponente asignado', 'Unidad Medida Ventas',
+                'Planicidad (mm)', 'MSA (Honda)', 'Fin de Vigencia', 'Disponente asignado', 'Unidad Medida Ventas',
                 /*BUDGET*/
                 'Tipo de Material (Budget)', 'Parte Int/Ext', 'Posición del Rollo para embarque', 'Modelo de negocio', 'Peso bruto REAL bascula (kg)', 'Peso neto REAL bascula (kg)', 'Ángulo A', 'Ángulo B',
                 'Scrap permitido (%)', 'Piezas Dobles', 'Reaplicación', 'Req. conciliación Puntas y colas', 'Conciliación Scrap Ingenieria', 'Pais S&P',
@@ -1900,7 +1900,7 @@
                         case GetColFromName("MSA (Honda)", colHeader):
                         case GetColFromName("Req. conciliación Puntas y colas", colHeader):
                         case GetColFromName("Scrap permitido (%)", colHeader):
-                        case GetColFromName("Fecha validez", colHeader):
+                        case GetColFromName("Fin de Vigencia", colHeader):
                         case GetColFromName("Disponente asignado", colHeader):
                             applyClass(TH, 'HTred');
                             break;
@@ -2062,7 +2062,7 @@
                 'Espesor (mm)', 'Tolerancia espesor negativa (mm)', 'Tolerancia espesor positiva (mm)', 'Ancho Rollo(mm)', 'Ancho entrega Cinta(mm)', 'Tolerancia ancho negativa (mm)',
                 'Tolerancia ancho positiva (mm)', 'Descripción Material (ES)', 'Descripción Material (EN)', 'Diametro interior entrada (mm)', 'Diametro interior salida (mm)', 'Diametro ext. cinta saliente Max (mm)', 'Peso Max. entrega cinta (KG)', 'Peso del recubrimiento',
                 'Procesadores Ext.', 'Número procesador Ext.', 'Núm. antigüo material',
-                'Planicidad (mm)', 'MSA (Honda)', 'Fecha validez', 'Unidad Medida Ventas',
+                'Planicidad (mm)', 'MSA (Honda)', 'Fin de Vigencia', 'Unidad Medida Ventas',
                 /*Budget*/
                 'Tipo de Material (Budget)', 'Parte Int/Ext', 'Posición del Rollo para embarque', 'Modelo de negocio', 'Peso bruto REAL bascula (kg)', 'Peso neto REAL bascula (kg)', 'Ángulo A', 'Ángulo B',
                 'Scrap permitido (%)', 'Piezas Dobles', 'Reaplicación', 'Req. conciliación Puntas y colas', 'Conciliación Scrap Ingenieria', 'Pais S&P',
@@ -2112,7 +2112,7 @@
                         case GetColFromName("MSA (Honda)", colHeader):
                         case GetColFromName("Req. conciliación Puntas y colas", colHeader):
                         case GetColFromName("Scrap permitido (%)", colHeader):
-                        case GetColFromName("Fecha validez", colHeader):
+                        case GetColFromName("Fin de Vigencia", colHeader):
                         case GetColFromName("Núm. parte del cliente", colHeader):
                             applyClass(TH, 'HTred');
                             break;
@@ -2265,7 +2265,7 @@
                 'Tolerancia ancho positiva (mm)', 'Avance (mm)', 'Tolerancia avance negativa (mm)', 'Tolerancia avance positiva (mm)', 'Descripción Material (ES)', 'Descripción Material (EN)', 'Forma',
                 'Piezas por auto', 'Pzas por Golpe', 'Pzas por paquete', 'Peso Bruto (KG)', 'Peso Neto (KG)', 'Peso del recubrimiento', '% de Scrap (puntas y colas)',
                 'Nombre Molino', 'Transito', 'Procesadores Ext.', 'Número procesador Ext.', 'Núm. antigüo material',
-                'Planicidad (mm)', 'MSA (Honda)', 'Fecha validez',
+                'Planicidad (mm)', 'MSA (Honda)', 'Fin de Vigencia',
                 /*BUDGET*/
                 'Tipo de Material (Budget)', 'Parte Int/Ext', 'Posición del Rollo para embarque', 'Modelo de negocio', 'Peso bruto REAL bascula (kg)',
                 'Peso neto REAL bascula (kg)', 'Trapecio: ángulo A', 'Trapecio: ángulo B',
@@ -2335,7 +2335,7 @@
                         case GetColFromName("MSA (Honda)", colHeader):
                         case GetColFromName("Req. conciliación Puntas y colas", colHeader):
                         case GetColFromName("Scrap permitido (%)", colHeader):
-                        case GetColFromName("Fecha validez", colHeader):
+                        case GetColFromName("Fin de Vigencia", colHeader):
                         case GetColFromName("Trapecio: ángulo A", colHeader):
                         case GetColFromName("Trapecio: ángulo B", colHeader):
                         case GetColFromName("Núm. parte del cliente", colHeader):
@@ -2497,7 +2497,7 @@
                 'Planicidad (mm)', 'Superficie', 'Tratamiento Superficial', 'Peso del recubrimiento', 'Nombre Molino', 'Forma', 'Núm. cliente', 'Núm. parte del cliente',
                 'MSA (Honda)', 'Diametro Exterior', 'Diametro Interior',
                 /*BUDGET*/
-                'Tipo de Material', 'Selling Type (Budget)','Fecha validez', 'Tipo Metal', 'Posición del Rollo para embarque', 'Modelo de negocio', 'Peso bruto REAL bascula (kg)',
+                'Tipo de Material', 'Selling Type (Budget)','Fin de Vigencia', 'Tipo Metal', 'Posición del Rollo para embarque', 'Modelo de negocio', 'Peso bruto REAL bascula (kg)',
                 'Peso neto REAL bascula (kg)', 'Trapecio: ángulo A', 'Trapecio: ángulo B',
                 'Scrap permitido (%)', 'Piezas Dobles', 'Reaplicación', 'Req. conciliación Puntas y colas', 'Conciliacion Scrap Ingeniería',
                 'Pais S&P', 'S&P 1 (antes IHS)', 'S&P 2 (antes IHS)', 'S&P 3 (antes IHS)', 'Propulsion System', 'Program', '¿Almacen Norte?', 'Tipo Transporte', 'Stacks por Paquete', 'Tipo de Pallet', 'tkMM SOP', 'tkMM EOP'
@@ -2624,7 +2624,7 @@
                             case GetColFromName("Peso Min (KG)", colHeader):
                             case GetColFromName("Peso Mínimo Tolerancia Positiva", colHeader):
                             case GetColFromName("Peso Mínimo Tolerancia Negativa", colHeader):
-                            case GetColFromName("Fecha validez", colHeader):
+                            case GetColFromName("Fin de Vigencia", colHeader):
                                 applyClass(TH, 'HTOrange');
                                 break;
                         }
@@ -3622,7 +3622,7 @@
             const container = document.querySelector('#hot_lista_tecnica');
 
             let colHeader = ['ID', 'Resultado', 'Tipo Material<br>(resultado)', 'Tipo de Venta', 'Peso Bruto<br>(platina)', 'Peso Neto<br>(platina)', 'Unidad de <br>medida', 'Sobrante - mm<br>(cintas)'
-                , 'Componente', 'Tipo Material<br>(componente)', 'Cantidad platinas<br>(platinas soldadas)', 'Cantidad cintas <br>resultantes (cintas)', 'Fecha validez<br>(reaplicaciones)'];
+                , 'Componente', 'Tipo Material<br>(componente)', 'Cantidad platinas<br>(platinas soldadas)', 'Cantidad cintas <br>resultantes (cintas)', 'Fin de Vigencia<br>(reaplicaciones)'];
 
             hot = new Handsontable(container, {
                 autoWrapRow: true,
@@ -3654,7 +3654,7 @@
                         case 11:
                             applyClass(TH, 'HTred');
                             break;
-                        case GetColFromName("Fecha validez<br>(reaplicaciones)", colHeader):
+                        case GetColFromName("Fin de Vigencia<br>(reaplicaciones)", colHeader):
                             applyClass(TH, 'HTOrange');
                             break;
                     }
