--- a/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_reporte/Index.cshtml
@@ -116,6 +116,9 @@
                                                 </a>
                                                 <a href="@Url.Action("Index", "BG_Forecast_cat_historico_ventas")" class="dropdown-item">
                                                     Histórico Ventas
+                                                </a> 
+                                                <a href="@Url.Action("Index", "BG_Forecast_cat_fiscal_years")" class="dropdown-item">
+                                                    Parámetros por FY
                                                 </a>
                                             </div>
                                         </div>
